--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -115,6 +115,13 @@ config MACH_VENTANA
        help
          Support for NVIDIA Ventana development platform
 
+config MACH_PICASSO
+       bool "Picasso board"
+       depends on ARCH_TEGRA_2x_SOC
+       select MACH_HAS_SND_SOC_TEGRA_WM8903 if SND_SOC
+       help
+         Support for the Acer A500/A501 tablet
+
 config MACH_KAEN
        bool "Kaen board"
        depends on ARCH_TEGRA_2x_SOC
