--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -24,6 +24,10 @@ config LEDS_CLASS
 
 comment "LED drivers"
 
+config ACER_LEDS
+	tristate "LED Support for ACER"
+	default n
+
 config LEDS_88PM860X
 	tristate "LED Support for Marvell 88PM860x PMIC"
 	depends on LEDS_CLASS
