picasso: Use correct gpio for SPKR_EN to allow switching between headphones and speakers and temporarily removed the BCM4329 driver from config.

--- a/arch/arm/configs/picasso_defconfig
+++ b/arch/arm/configs/picasso_defconfig
@@ -1242,11 +1242,11 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCM4329=m
-CONFIG_BCM4329_FIRST_SCAN=y
-CONFIG_BCM4329_FW_PATH="/lib/firmware/brcm/fw_bcm4329.bin"
-CONFIG_BCM4329_NVRAM_PATH="/lib/firmware/brcm/nvram.txt"
-CONFIG_BCM4329_WIFI_CONTROL_FUNC=y
+# CONFIG_BCM4329 is not set
+# CONFIG_BCM4329_FIRST_SCAN=y
+# CONFIG_BCM4329_FW_PATH="/lib/firmware/brcm/fw_bcm4329.bin"
+# CONFIG_BCM4329_NVRAM_PATH="/lib/firmware/brcm/nvram.txt"
+# CONFIG_BCM4329_WIFI_CONTROL_FUNC=y
 # CONFIG_BCM4329_DHD_USE_STATIC_BUF is not set
 # CONFIG_BCM4329_HW_OOB is not set
 # CONFIG_BCM4329_OOB_INTR_ONLY is not set
