--- a/drivers/video/tegra/dc/Makefile
+++ b/drivers/video/tegra/dc/Makefile
@@ -1,6 +1,5 @@
 GCOV_PROFILE := y
-EXTRA_CFLAGS += -Idrivers/video/tegra/host
-obj-y += dc.o bandwidth.o mode.o clock.o lut.o csc.o window.o
+obj-y += dc.o
 obj-y += rgb.o
 obj-y += hdmi.o
 obj-$(CONFIG_TEGRA_NVHDCP) += nvhdcp.o
@@ -9,5 +8,4 @@ obj-y += nvsd.o
 obj-y += dsi.o
 obj-y += dc_sysfs.o
 obj-$(CONFIG_TEGRA_OVERLAY) += overlay.o
-obj-y += dc_config.o
 obj-$(CONFIG_TEGRA_DC_EXTENSIONS) += ext/
