drivers/video/tegra: use Acer's picasso framebuffer code
Signed-off-by: Christophe Chapuis <chris.chapuis@gmail.com>

--- a/arch/arm/configs/WebOS_defconfig
+++ b/arch/arm/configs/WebOS_defconfig
@@ -1376,8 +1376,8 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_AD7879 is not set
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-# CONFIG_TOUCHSCREEN_ATMEL_MXT_PICASSO is not set
+# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT_PICASSO=y
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
@@ -2038,6 +2038,7 @@ CONFIG_NVMAP_CACHE_MAINT_BY_SET_WAYS=y
 # CONFIG_NVMAP_VPR is not set
 # CONFIG_NVMAP_FORCE_ZEROED_USER_PAGES is not set
 # CONFIG_TEGRA_DSI is not set
+CONFIG_TEGRA_HDMI=y
 CONFIG_TEGRA_NVHDCP=y
 # CONFIG_TEGRA_HDMI_74MHZ_LIMIT is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
