--- a/arch/arm/configs/WebOS_defconfig
+++ b/arch/arm/configs/WebOS_defconfig
@@ -1029,6 +1029,7 @@ CONFIG_BCM4329_RFKILL=y
 CONFIG_TEGRA_CRYPTO_DEV=y
 # CONFIG_MAX1749_VIBRATOR is not set
 # CONFIG_THERM_EST is not set
+CONFIG_TEGRA_THROUGHPUT=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1907,6 +1908,7 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 #
 # Miscelaneous helper chips
 #
+# CONFIG_VIDEO_VIVI is not set
 CONFIG_TEGRA_RPC=y
 CONFIG_TEGRA_AVP=y
 CONFIG_TEGRA_MEDIASERVER=y
@@ -2022,9 +2024,8 @@ CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_GRHOST_USE_NVMAP=y
 CONFIG_TEGRA_GRHOST_DEFAULT_TIMEOUT=30000
 CONFIG_TEGRA_DC=y
-CONFIG_TEGRA_OVERLAY=y
 CONFIG_FB_TEGRA=y
-# CONFIG_TEGRA_DC_EXTENSIONS is not set
+CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_TEGRA_NVMAP=y
 CONFIG_NVMAP_RECLAIM_UNPINNED_VM=y
 CONFIG_NVMAP_ALLOW_SYSMEM=y
@@ -2038,7 +2039,6 @@ CONFIG_NVMAP_CACHE_MAINT_BY_SET_WAYS=y
 # CONFIG_NVMAP_VPR is not set
 # CONFIG_NVMAP_FORCE_ZEROED_USER_PAGES is not set
 # CONFIG_TEGRA_DSI is not set
-CONFIG_TEGRA_HDMI=y
 CONFIG_TEGRA_NVHDCP=y
 # CONFIG_TEGRA_HDMI_74MHZ_LIMIT is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
